--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -1,16 +1,19 @@
 @charset "UTF-8";
-table {
-    width: 90%;
+body {
+  width: 90%;
+}
+table{
+    width: 100%;
     border-collapse: collapse;
-    font-size: 12px;
+  font-size: 12px;
 }
 table th, table td {
     border: 1px solid #ddd;
     padding: 6px;
 }
 table th {
-    background-color: #F2F2F2;
+  background-color: #F2F2F2;
 }
 .center {
-    text-align: center;
+  text-align: center;
 }
