--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head
-    th:replace="common/head :: head_fragment(title = 'ユーザー情報編集', scripts = ~{::script}, links = ~{::link})"></head>
+<html xmls:th="http://www.thymeleaf.org">
+<head>
+  	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+	<script th:src="@{/js/edit.js}" ></script>
+	<meta charset="utf-8" />
+<title>Insert title here</title>
+</head>
 <body>
     <div class="container">
         <h1>ユーザー情報編集</h1>
-        <form th:action="@{/user/update}" th:object="${userUpdateRequest}"
-            th:method="post">
+        <form id ="user-data" th:action="@{/user/update}" th:object="${userUpdateRequest}" th:method="post">
             <input type="hidden" th:field="*{id}" />
             <div>
                 <div class="row mx-md-n5">
@@ -34,10 +39,8 @@
                 </div>
             </div>
             <br />
-            <div class="text-center">
-                <input type="submit" class="btn btn-primary" value="保存">
-                <a href="/user/list" class="btn btn-secondary">キャンセル</a>
-            </div>
+            <a href="/user/list" class="btn btn-secondary">キャンセル</a>
+            <button id="btn-update" class="btn btn-primary" type="button">保存（REST）</button>
         </form>
     </div>
 </body>
